# llm-techpost-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
data/: test_dataset.json
src/: eval.py  main.py  setup_prompt.py  upload_vectorstore.py
src/chunker/: __init__.py  token.py
src/reader/: __init__.py  html.py  pdf.py
src/workflow/: __init__.py  agent.py  prompt.py  state.py
src/workflow/tools/: __init__.py  anthropic_posts.py  base.py  gemini_posts.py  openai_posts.py  web.py
