[project]
name = "llm-techpost-chatbot"
version = "0.1.0"
description = "기술블로그 RAG 기반 질의응답 Agent 프로젝트"
authors = [
    {name = "Author", email = "author@example.com"}
]
dependencies = [
    "pymupdf>=1.23.14",
    "pdfplumber>=0.10.3",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [] 
