[project]
name = "llm-techpost-chatbot"
version = "0.1.0"
description = "기술블로그 RAG 기반 질의응답 Agent 프로젝트"
authors = [
    {name = "Author", email = "author@example.com"}
]
dependencies = [
    "pymupdf>=1.23.14",
    "pdfplumber>=0.10.3",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "langgraph>=0.5.1",
    "langchain-text-splitters>=0.3.8",
    "qdrant-client>=1.14.3",
    "langchain-openai>=0.3.27",
    "python-dotenv>=1.1.1",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "langfuse>=3.1.3",
    "langchain>=0.3.26",
    "pandas>=2.3.1",
    "fastembed>=0.7.1",
    "langchain-qdrant>=0.2.0",
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [] 
